2008-11-10  Cedric Vivier  <cedricv@neonux.com>

	* AvoidLackOfCohesionOfMethodsRule.cs: Count LCOM correctly wrt
	static and visible fields.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Maintainability.mdp:
	* Gendarme.Rules.Maintainability.csproj: Activate makefile integration
	for all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationRule.cs: Fix double cast (self-test)

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Use generic parameter owner
	instead of genericity of current method (GetConstructedGenericType).

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Handle correctly generic arguments
	and/or non-generic arguments used as a generic argument of a generic method.
	Fixes false positives on such cases and makes the rule suggests a proper
	type instead of the infamous !!0 on real positive cases (such as
	SpecializedClass.GenericMethodArgument testcase).

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Fix NRE when gp.Owner is not a TypeReference.
	Regression tests pending, this needs more investigation.

2008-10-31  Jesse Jones  <jesjones@mindspring.com> 

	* AvoidComplexMethodsTest.cs: No longer relies on CustomAttributeCollection
	returning attributes in the order they were declared in.

2008-10-24  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLackOfCohesionOfMethodsRule.cs: Revert visibility change for
	GetCohesivenessForType since it's used in the unit test. Add a null
	check inside that method (self-test)

2008-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsRule.cs: Add null check in method
	GetCyclomaticComplexityForMethod (self-test)
	* AvoidLackOfCohesionOfMethodsRule.cs: Change visibility of