@@ -1,5 +1,10 @@
 2008-11-10  Cedric Vivier  <cedricv@neonux.com>
 
+	* AvoidUnnecessarySpecializationRule.cs: Prettify the suggestion by
+	showing generic parameters as SomeType<T,U> instead of SomeType`2.
+
+2008-11-10  Cedric Vivier  <cedricv@neonux.com>
+
 	* AvoidLackOfCohesionOfMethodsRule.cs: Count LCOM correctly wrt
 	static and visible fields.
 
